# lecture2note

./: .env.example  .gitignore  README.md  hansong_url.txt  main.py  mcp_server.py  pyproject.toml  requirements.txt  test_lecture.txt
.claude/: settings.local.json
.claude/agents/: batch-agent.md  note-agent.md  subtitle-agent.md
.claude/commands/: note-generate.md  subtitle-proofread.md  subtitle-translate.md
.claude/skills/video-process/: SKILL.md
prompts/: cover_image_system.md  merge_system.md  note_system.md  proofread_system.md  summary_system.md  translate_system.md  translate_zh_system.md
src/: assembler.py  downloader.py  noter.py  subtitle.py  transcriber.py  whisper_transcriber.py
src/l2n/: downloader.py  noter.py  subtitle.py  whisper_transcriber.py
src/l2n/prompts/: summary_system.md  translate_zh_system.md
src/l2n_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
